--- a/antigravity/agent/config.json
+++ b/antigravity/agent/config.json
@@ -29,6 +29,15 @@
         "./agent/docs/esprima.md",
         "./agent/docs/monaco-editor.md",
         "./agent/docs/nextjs.md",
-        "./agent/docs/account-schema.md"
+        "./agent/docs/account-schema.md",
+        "./agent/docs/sample-account-configs.md",
+        "./agent/configs/25k-eval-v1.json",
+        "./agent/configs/25k-straight-v1.json",
+        "./agent/configs/50k-eval-v1.json",
+        "./agent/configs/50k-straight-v1.json",
+        "./agent/configs/100k-eval-v1.json",
+        "./agent/configs/100k-straight-v1.json",
+        "./agent/configs/150k-eval-v1.json",
+        "./agent/configs/150k-straight-v1.json"
     ]
 }
