config: register Milestone 8 documentation in agent context
- config.json: Added milestone8.md and 4 new docs to context_files
- instructions.md: Added milestone8.md to Project Documents
- instructions.md: Added 4 new docs to Business Logic section
All documentation now loaded into agent memory

--- a/antigravity/agent/config.json
+++ b/antigravity/agent/config.json
@@ -15,6 +15,7 @@
         "./agent/milestone5.md",
         "./agent/milestone6.md",
         "./agent/milestone7.md",
+        "./agent/milestone8.md",
         "./agent/docs/tradingview-lightweight-charts.md",
         "./agent/docs/d3js.md",
         "./agent/docs/tulip-indicators.md",
@@ -32,6 +33,10 @@
         "./agent/docs/account-schema.md",
         "./agent/docs/sample-account-configs.md",
         "./agent/docs/propfirm-model.md",
+        "./agent/docs/provisioning-api.md",
+        "./agent/docs/event-contracts.md",
+        "./agent/docs/webhook-bots.md",
+        "./agent/docs/tenant-config.md",
         "./agent/configs/25k-eval-v1.json",
         "./agent/configs/25k-straight-v1.json",
         "./agent/configs/50k-eval-v1.json",
