config: register additional Milestone 8 docs in agent context
- Added 4 new docs to config.json context_files
- Added 4 new docs to instructions.md Business Logic section
- rule-engine.md, audit-log.md, api-endpoints.md, algobot-marketplace.md

--- a/antigravity/agent/config.json
+++ b/antigravity/agent/config.json
@@ -37,6 +37,10 @@
         "./agent/docs/event-contracts.md",
         "./agent/docs/webhook-bots.md",
         "./agent/docs/tenant-config.md",
+        "./agent/docs/rule-engine.md",
+        "./agent/docs/audit-log.md",
+        "./agent/docs/api-endpoints.md",
+        "./agent/docs/algobot-marketplace.md",
         "./agent/configs/25k-eval-v1.json",
         "./agent/configs/25k-straight-v1.json",
         "./agent/configs/50k-eval-v1.json",
