Initial commit: Defined white-label architecture, rule engine, and webhooks.

--- a/antigravity/agent/config.json
+++ b/antigravity/agent/config.json
@@ -1,6 +1,6 @@
 {
-    "name": "TradingViewBuilder",
-    "description": "An autonomous agent that builds a TradingView-like platform.",
+    "name": "QuantLabEngine",
+    "description": "A white-label simulated trading engine for proprietary trading firms, featuring multi-tenant support, webhook-driven algo-bots, real-time rule enforcement, and immutable audit logging.",
     "skills_path": "./skills",
     "workspace_path": "./workspace",
     "goals_file": "./agent/goals.md",
@@ -31,7 +31,6 @@
         "./agent/docs/monaco-editor.md",
         "./agent/docs/nextjs.md",
         "./agent/docs/account-schema.md",
-        "./agent/docs/sample-account-configs.md",
         "./agent/docs/propfirm-model.md",
         "./agent/docs/provisioning-api.md",
         "./agent/docs/event-contracts.md",
@@ -41,6 +40,8 @@
         "./agent/docs/audit-log.md",
         "./agent/docs/api-endpoints.md",
         "./agent/docs/algobot-marketplace.md",
+        "./agent/docs/bot-pricing.md",
+        "./agent/docs/GLOSSARY.md",
         "./agent/configs/25k-eval-v1.json",
         "./agent/configs/25k-straight-v1.json",
         "./agent/configs/50k-eval-v1.json",
@@ -48,6 +49,24 @@
         "./agent/configs/100k-eval-v1.json",
         "./agent/configs/100k-straight-v1.json",
         "./agent/configs/150k-eval-v1.json",
-        "./agent/configs/150k-straight-v1.json"
+        "./agent/configs/150k-straight-v1.json",
+        "./agent/configs/examples/tenant-aware-config.json",
+        "./agent/configs/examples/versioned-config-v1.json",
+        "./agent/configs/examples/versioned-config-v2.json",
+        "./agent/configs/examples/base-config.json",
+        "./agent/configs/examples/inherited-config.json",
+        "./agent/skills/rule_engine/check-daily-loss.skill.json",
+        "./agent/skills/rule_engine/check-max-loss.skill.json",
+        "./agent/skills/rule_engine/check-drawdown.skill.json",
+        "./agent/skills/rule_engine/check-min-days.skill.json",
+        "./agent/skills/rule_engine/check-consistency.skill.json",
+        "./agent/skills/rule_engine/check-instrument-allowed.skill.json",
+        "./agent/skills/webhook/receive-webhook-signal.skill.json",
+        "./agent/skills/webhook/validate-signal.skill.json",
+        "./agent/skills/webhook/execute-simulated-trade.skill.json",
+        "./agent/skills/audit/write-audit-log.skill.json",
+        "./agent/skills/audit/query-audit-log.skill.json",
+        "./agent/configs/tenants/tenantA.json",
+        "./agent/configs/tenants/tenantB.json"
     ]
 }
